--- a/inf.1
+++ b/inf.1
@@ -2,12 +2,12 @@
 .\"     Title: inf
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets vsnapshot <http://docbook.sf.net/>
-.\"      Date: 07/01/2025
+.\"      Date: 07/02/2025
 .\"    Manual: INF Manual
 .\"    Source: INF 1.2.0
 .\"  Language: English
 .\"
-.TH "INF" "1" "07/01/2025" "INF 1\&.2\&.0" "INF Manual"
+.TH "INF" "1" "07/02/2025" "INF 1\&.2\&.0" "INF Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -41,7 +41,7 @@ inf \- instant feedback for your compile and run loop
 .RS 4
 Execute
 \fIrun_cmd\fR
-after the
+after
 \fIcompile_cmd\fR
 finishes successfully\&.
 .RE
@@ -113,7 +113,7 @@ Show usage information\&.
 .RE
 .SH "EXAMPLES"
 .sp
-Rebuild and run if source code when main\&.c changes:
+Rebuild and run when main\&.c changes:
 .sp
 .if n \{\
 .RS 4
